Cropped the main picture in hopes of fixing display issues

--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@ footer {
     padding: 5px;
     
 }
-/*Media query, 1000px fixes some realignment stuff*/
+/*Media query, 750px fixes some realignment stuff*/
 @media screen and (max-width: 750px) {
 
 .box img {
@@ -525,7 +525,7 @@ footer {
 }    
     
 }
-/*Media query, 1000px */
+/*Media query, 750px */
 
 /*Media query, 700px fixes some realignment stuff*/
 @media screen and (max-width: 700px) {
@@ -543,6 +543,7 @@ footer {
 @media screen and (max-width: 550px) {
 #home {
     background-position: 50% 0px;
+    background-size: 50%;
 }
 #home h1 {
     font-size: 3.5em;   
@@ -569,6 +570,7 @@ footer {
 @media screen and (max-width: 350px) {
 #home {
     background-position: 50% 0px;
+    background-size: 50%;
 }
 #home h1 {
     font-size: 3em;   
@@ -591,6 +593,7 @@ footer {
 @media screen and (min-width: 1000px) {
 #home {
     background-position: 50% -100px;
+    background-size: 50%;
 }
      
 /*End media query 1000px*/    }
